...
                style = CustomTheme.typography.button,
                color = if (inputText != "") {
                    CustomTheme.colors.yellow
                } else {
                    CustomTheme.colors.gray
                },
                modifier = Modifier.testTag("save_task")
            )
        }
    }
}

@Composable
...
                    color = CustomTheme.colors.gray,
                    style = CustomTheme.typography.body
                )
            },
            modifier = Modifier
                .fillMaxWidth()
                .testTag("text_field")
        )
    }
}

@Composable
private fun TaskImportance(
...
                interactionSource = remember { MutableInteractionSource() },
                indication = rememberRipple(
                    color = CustomTheme.colors.supportSeparator
                ),
                onClick = onDelete
            )
            .testTag("delete_task")
    ) {
        Icon(
            Icons.Filled.Delete,
            contentDescription = "Кнопка",
            tint = if (removed) {
                gray
...
