...
            modifier = Modifier
                .padding(end = 16.dp, bottom = 64.dp)
                .align(Alignment.BottomEnd)
                .semantics {
                    contentDescription = "Создать новую задачу"
                }
                .testTag("add_button"),
            shape = CircleShape,
            containerColor = CustomTheme.colors.yellow,
            contentColor = CustomTheme.colors.white
        ) {
            Icon(Icons.Filled.Add, "Action button")
        }
...
